--- a/src/main/res/layout/activity_main.xml
+++ b/src/main/res/layout/activity_main.xml
@@ -18,6 +18,13 @@
             android:text="@string/box_one"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"  />
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintDimensionRatio=""/>
+    <TextView
+            android:text="@string/box_two"
+            android:layout_width="130dp"
+            android:layout_height="130dp"
+            android:id="@+id/box_two_text" android:layout_marginTop="12dp"
+            app:layout_constraintTop_toBottomOf="@+id/box_one_text" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="16dp" style="@style/WhiteBox"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
